add Lays to Portfolio

--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
     <div class="container">
         <h2>Portfolio</h2>
         <div class="portfolio-wrap">
+            <a href="https://footballprizes.ru/" target="_blank">
+                <div class="img-wrap"><img src="img/portfolio/lays.jpg" alt=""></div>
+            </a>
             <a href="http://grenki.hrusteam.ru/" target="_blank">
                 <div class="img-wrap"><img src="img/portfolio/grenki.jpg" alt=""></div>
             </a>
@@ -203,9 +206,6 @@
             </a>
             <a href="http://shopping.wmj.ru/" target="_blank">
                 <div class="img-wrap"><img src="img/portfolio/beeline.jpg" alt=""></div>
-            </a>
-            <a href="http://b2c.wave.com.ua/" target="_blank">
-                <div class="img-wrap"><img src="img/portfolio/btc-24.jpg" alt=""></div>
             </a>
             <a href="http://narko-med.ru/" target="_blank">
                 <div class="img-wrap"><img src="img/portfolio/narko-med.jpg" alt=""></div>
