--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
             <li>Vuex</li>
             <li>ES6</li>
             <li>Youtube API</li>
+            <li>Google Map API</li>
+            <li>Google Translate API</li>
             <li>HTML5 Video</li>
             <li>HTML5 Audio</li>
             <li>Swiper.js</li>
