--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
             <li>AJAX</li>
             <li>Git</li>
             <li>npm</li>
+            <li>Gulp</li>
         </ul>
     </div>
 </div>
