--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <h2>Portfolio</h2>
         <div class="portfolio-wrap">
             <a href="https://footballprizes.ru/" target="_blank">
-                <div class="img-wrap"><img src="img/lays-football.jpg" alt=""></div>
+                <div class="img-wrap"><img src="img/portfolio/lays-football.jpg" alt=""></div>
             </a>
             <a href="http://grenki.hrusteam.ru/" target="_blank">
                 <div class="img-wrap"><img src="img/portfolio/grenki.jpg" alt=""></div>
@@ -196,7 +196,7 @@
             </a>
             <!--<a href="https://newyear.lays.ru/" target="_blank">-->
             <a href="http://dev-laysbag.devup.cc/" target="_blank">
-                <div class="img-wrap"><img src="img/lays.jpg" alt=""></div>
+                <div class="img-wrap"><img src="img/portfolio/lays.jpg" alt=""></div>
             </a>
             <a href="https://tge.selfllery.com/test/" target="_blank">
                 <div class="img-wrap"><img src="img/portfolio/selfllery-landing.jpg" alt=""></div>
