change to office work

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="left">
             <h1>Front-end developer</h1>
             <h2>Gren Valentin Igorevich</h2>
-            <p class="light grey">Part-time, remote work</p>
+            <p class="light grey">Full-time, office or remote work</p>
             <div class="ava-wrap">
                 <img src="img/ava.jpg" class="ava">
                 <div class="ava-info">
