--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <a href="http://dev-laysbag.devup.cc/" target="_blank">
                 <div class="img-wrap"><img src="img/portfolio/lays.jpg" alt=""></div>
             </a>
-            <a href="https://tge.selfllery.com/test/" target="_blank">
+            <a href="https://tge.selfllery.com/" target="_blank">
                 <div class="img-wrap"><img src="img/portfolio/selfllery-landing.jpg" alt=""></div>
             </a>
             <a href="http://dunlop.promo/" target="_blank">
