* add new company

--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
     </div>
     <div id="experience" class="experience">
         <h2>Experience</h2>
+
+        <div class="row">
+            <div class="left selfllery">
+                <img src="img/selfllery.png" alt="Selfllery">
+            </div>
+            <div class="right">
+                <h4>Front-end Developer</h4>
+                <p class="bold company">Selfllery</p>
+                <p class="grey">
+                    April 2018 - present time
+                    <span class="black bold">2 months</span>
+                </p>
+            </div>
+        </div>
+
         <div class="row">
             <div class="left develup">
                 <svg viewBox="0 0 194 22">
@@ -85,10 +100,10 @@
                 </svg>
             </div>
             <div class="right">
-                <h4>Front-end Developer, Vue.js developer</h4>
+                <h4>Front-end Developer, Vue.js</h4>
                 <p class="bold company">Develup</p>
                 <p class="grey">
-                    July 2017 - present time
+                    July 2017 - April 2018
                     <span class="black bold">10 months</span>
                 </p>
             </div>
@@ -99,7 +114,7 @@
             </div>
             <div class="right">
                 <h4>Front-end Developer</h4>
-                <p class="bold company">Photoliga - Selfllery</p>
+                <p class="bold company">Photoliga</p>
                 <p class="grey">
                     October 2016 - July 2017
                     <span class="black bold">10 months</span>
