* add get params to style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="CV. Front-end developer. Valik Gren">
     <meta name="Keywords" content="Front-end, Front, CV, Резюме, Valik Gren">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css?v1.0">
 </head>
 <body>
 <header>
