--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <h4>Front-end Developer</h4>
                 <p class="bold company">Selfllery</p>
                 <p class="grey">
-                    April 2018 - present time
-                    <span class="black bold">2 months</span>
+                    March 2018 - present time
+                    <span class="black bold">6 months</span>
                 </p>
             </div>
         </div>
@@ -103,8 +103,8 @@
                 <h4>Front-end Developer, Vue.js</h4>
                 <p class="bold company">Develup</p>
                 <p class="grey">
-                    July 2017 - April 2018
-                    <span class="black bold">10 months</span>
+                    June 2017 - May 2018
+                    <span class="black bold">1 year</span>
                 </p>
             </div>
         </div>
@@ -116,8 +116,8 @@
                 <h4>Front-end Developer</h4>
                 <p class="bold company">Photoliga</p>
                 <p class="grey">
-                    October 2016 - July 2017
-                    <span class="black bold">10 months</span>
+                    July 2016 - June 2017
+                    <span class="black bold">1 year</span>
                 </p>
             </div>
         </div>
@@ -129,12 +129,12 @@
                 <h4>Front-end Developer</h4>
                 <p class="bold company">Wave agency</p>
                 <p class="grey">
-                    June 2016 - October 2016
+                    Feb 2016 - June 2016
                     <span class="black bold">6 months</span>
                 </p>
             </div>
         </div>
-        <div class="row">
+<!--         <div class="row">
             <div class="left wave">
                 <img src="img/klima.png" alt="">
             </div>
@@ -146,7 +146,7 @@
                     <span class="black bold">5 months</span>
                 </p>
             </div>
-        </div>
+        </div> -->
     </div>
     <div id="education" class="education experience">
         <h2>Education</h2>
