--- a/index.html
+++ b/index.html
@@ -5,33 +5,46 @@
     <title>Front-end developer</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="CV. Front-end developer. Valik Gren">
-    <meta name="Keywords" content="Front-end, Front, CV, Резюме, Valik Gren">
+    <meta name="Keywords" content="Front-end, Front, CV, Резюме, Valik Gren, Vue.js">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css?v1.1">
 </head>
 <body>
-<header>
-    <nav>
-        <a href="#contacts">Contacts</a>
-        <a href="#contacts">Main info</a>
-        <a href="#experience">Experience</a>
-        <a href="#education">Education</a>
-        <a href="#skills">Skills</a>
-        <a href="#portfolio">Portfolio</a>
-    </nav>
-</header>
+<!--<header>-->
+<!--    <nav>-->
+<!--        <a href="#contacts">Contacts</a>-->
+<!--        <a href="#contacts">Main info</a>-->
+<!--        <a href="#experience">Experience</a>-->
+<!--        <a href="#education">Education</a>-->
+<!--        <a href="#skills">Skills</a>-->
+<!--        <a href="#portfolio">Portfolio</a>-->
+<!--    </nav>-->
+<!--</header>-->
 <div class="container">
+    <h1 class="specialization">Front-end developer. <span class="main-skills grey">Vue.js, React.js</span></h1>
     <div id="contacts" class="title">
         <div class="left">
-            <h1>Front-end developer</h1>
             <h2>Gren Valentin Igorevich</h2>
-            <p class="light grey">Full-time office / Part-time remote work</p>
             <div class="ava-wrap">
                 <img src="img/ava.jpg" class="ava">
-                <div class="ava-info">
-                    <p class="left">24 age</p>
-                    <p class="right">Odessa</p>
-                </div>
+<!--                <div class="ava-info">-->
+<!--                    <p class="left">25 age</p>-->
+<!--                    <p class="right">Odessa</p>-->
+<!--                </div>-->
+            </div>
+            <div class="info">
+                <h4>
+                    <span class="left">Age:</span>
+                    <span>25</span>
+                </h4>
+                <h4>
+                    <span class="left">English:</span>
+                    <span>intermediate</span>
+                </h4>
+                <h4>
+                    <span class="left">City:</span>
+                    <span>Odessa</span>
+                </h4>
             </div>
         </div>
         <div class="right">
@@ -57,7 +70,7 @@
                     <img src="img/skype.png" alt="">
                 </div>
                 <div class="right">
-                    <p>waleeex</p>
+                    <a href="skype:waleeex">waleeex</a>
                 </div>
             </div>
             <div class="row">
@@ -65,16 +78,53 @@
                     <img src="img/linkedin.png" alt="">
                 </div>
                 <div class="right">
-                    <a href="https://www.linkedin.com/in/валик-грень-a7058887" target="_blank">валик-грень-a7058887</a>
+                    <a href="https://www.linkedin.com/in/valikgren/" target="_blank">linkedin.com/in/valikgren</a>
                 </div>
             </div>
         </div>
-
-
     </div>
-    <div id="experience" class="experience">
-        <h2>Experience</h2>
+    <div id="about-me" class="about-me">
+        <p class="about-me_text">
+            My name is Valik and I'm a front-end developer with 4 years of experience. I
+            develop SPA web applications using the Vue.js or React.js stack (Vue + Vuex, React + Redux).
+            I love to create supportive products, which are solving customers needs, use new
+            technologies and try new approaches in development.
+        </p>
+        <p class="about-me_text">
+            The project I'm proud of is a social network that we developed in a small team from scratch, where I was the only <nobr>front-end developer</nobr> in the team.
+            <a href="https://selfllery.com/" target="_blank" class="about-me_text__link">https://selfllery.com/</a>
+        </p>
+        <p class="about-me_text">
+            Now active learn english. I go to courses in an English school in a group at an intermediate level.
+        </p>
+    </div>
+    <div id="skills" class="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>JavaScript</li>
+            <li>Vue.js</li>
+            <li>Vuex</li>
+            <li>Vue ssr / Nuxt.js</li>
+            <li>TypeScript</li>
+            <li>React.js</li>
+            <li>Redux</li>
+            <li>HTML5</li>
+            <li>CSS3 (SCSS)</li>
+            <li>Git</li>
+            <li>npm</li>
+            <li>ES6</li>
+<!--            <li>Youtube API</li>-->
+<!--            <li>Google Map API</li>-->
+<!--            <li>Google Translate API</li>-->
+            <li>JQuery</li>
+            <li>AJAX</li>
+            <li>Gulp</li>
+            <li>Webpack</li>
+        </ul>
+    </div>
 
+    <div id="experience" class="experience">
+        <h2>Experience <span class="grey"> (4 years)</span></h2>
         <div class="row">
             <div class="left selfllery">
                 <svg data-name="Слой 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 103.12 103.12"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:none;}.cls-3{fill:#a9da3a;}.cls-10,.cls-11,.cls-12,.cls-13,.cls-14,.cls-15,.cls-16,.cls-17,.cls-18,.cls-3,.cls-4,.cls-5,.cls-6,.cls-7,.cls-8,.cls-9{isolation:isolate;}.cls-4{fill:#49809a;}.cls-5{fill:#7cdb5b;}.cls-6{fill:#b05fe6;}.cls-7{fill:#8560eb;}.cls-8{fill:#7f43f9;}.cls-9{fill:#b233f9;}.cls-10{fill:#c22e2c;}.cls-11{fill:#e9a657;}.cls-12{fill:#e06f27;}.cls-13{fill:#f9eb65;}.cls-14{fill:#fdfa3e;}.cls-15{fill:#f2d049;}.cls-16{fill:#6f9ffb;}.cls-17{fill:#6372fa;}.cls-18{fill:#8362fa;}</style></defs><title>logo</title><path class="cls-1" d="M102.13,61.84l-5.27-5.27V25.51a2.32,2.32,0,0,0-2.32-2.32H87.09l-22-22a2.32,2.32,0,0,0-3.29,0L56.57,6.5H25.51a2.32,2.32,0,0,0-2.32,2.32v7.45l-22,22a2.32,2.32,0,0,0,0,3.29L6.5,46.79V77.85a2.32,2.32,0,0,0,2.32,2.32h7.45l22,22a2.32,2.32,0,0,0,3.29,0l5.27-5.27H77.85a2.32,2.32,0,0,0,2.32-2.32V87.09l22-22A2.32,2.32,0,0,0,102.13,61.84ZM63.48,56.57l-6.91,6.91H46.79l-6.91-6.91V46.79l6.91-6.91h9.78l6.91,6.91Z"/><polygon class="cls-2" points="56.57 39.88 46.79 39.88 39.88 46.79 39.88 46.79 39.88 56.57 46.79 63.48 56.57 63.48 63.48 56.57 63.48 46.79 56.57 39.88"/><path class="cls-3" d="M63.48,46.79V25.51a2.32,2.32,0,0,1,2.32-2.32H87.09l-22-22a2.32,2.32,0,0,0-3.29,0L56.57,6.5V39.88Z"/><path class="cls-4" d="M56.57,39.88l-15-15a2.32,2.32,0,0,1,0-3.29l15-15H25.51a2.32,2.32,0,0,0-2.32,2.32v7.45l23.6,23.6Z"/><path class="cls-5" d="M41.52,24.83l15,15V6.5l-15,15A2.32,2.32,0,0,0,41.52,24.83Z"/><path class="cls-6" d="M46.79,39.88H25.51a2.32,2.32,0,0,1-2.32-2.32V16.28l-22,22a2.32,2.32,0,0,0,0,3.29L6.5,46.79H39.88Z"/><path class="cls-7" d="M25.51,39.88H46.79l-23.6-23.6V37.56A2.32,2.32,0,0,0,25.51,39.88Z"/><path class="cls-8" d="M39.88,46.79h0l-15,15a2.32,2.32,0,0,1-3.29,0l-15-15V77.85a2.32,2.32,0,0,0,2.32,2.32h7.45l23.6-23.6Z"/><path class="cls-9" d="M24.83,61.84l15-15H6.5l15,15A2.32,2.32,0,0,0,24.83,61.84Z"/><path class="cls-10" d="M46.79,63.48l15,15a2.32,2.32,0,0,1,0,3.29l-15,15H77.85a2.32,2.32,0,0,0,2.32-2.32V87.09l-23.6-23.6Z"/><path class="cls-11" d="M102.13,61.84l-5.27-5.27H63.48l-6.91,6.91H77.85a2.32,2.32,0,0,1,2.32,2.32V87.09l22-22A2.32,2.32,0,0,0,102.13,61.84Z"/><path class="cls-12" d="M77.85,63.48H56.57l23.6,23.6V65.81A2.32,2.32,0,0,0,77.85,63.48Z"/><path class="cls-13" d="M63.48,56.57l15-15a2.32,2.32,0,0,1,3.29,0l15,15V25.51a2.32,2.32,0,0,0-2.32-2.32H87.09l-23.6,23.6Z"/><path class="cls-14" d="M63.48,25.51V46.79l23.6-23.6H65.81A2.32,2.32,0,0,0,63.48,25.51Z"/><path class="cls-15" d="M78.53,41.52l-15,15H96.86l-15-15A2.32,2.32,0,0,0,78.53,41.52Z"/><path class="cls-16" d="M39.88,56.57V77.85a2.32,2.32,0,0,1-2.32,2.32H16.28l22,22a2.32,2.32,0,0,0,3.29,0l5.27-5.27V63.48Z"/><path class="cls-17" d="M39.88,77.85V56.57l-23.6,23.6H37.56A2.32,2.32,0,0,0,39.88,77.85Z"/><path class="cls-18" d="M61.84,78.53l-15-15V96.86l15-15A2.32,2.32,0,0,0,61.84,78.53Z"/></svg>
@@ -84,7 +134,7 @@
                 <p class="bold company">Selfllery</p>
                 <p class="grey">
                     March 2018 - present time
-                    <span class="black bold">6 months</span>
+                    <span class="black bold">1 year 7 months</span>
                 </p>
             </div>
         </div>
@@ -176,46 +226,24 @@
         </div>
 
     </div>
-    <div id="skills" class="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>JavaScript</li>
-            <li>Vue.js</li>
-            <li>HTML5</li>
-            <li>CSS3 (SCSS)</li>
-            <li>Vuex</li>
-            <li>ES6</li>
-            <li>Youtube API</li>
-            <li>Google Map API</li>
-            <li>Google Translate API</li>
-            <li>HTML5 Video</li>
-            <li>HTML5 Audio</li>
-            <li>Swiper.js</li>
-            <li>JQuery</li>
-            <li>AJAX</li>
-            <li>Git</li>
-            <li>npm</li>
-            <li>Gulp</li>
-        </ul>
-    </div>
 </div>
 <div id="portfolio" class="portfolio">
     <div class="container">
         <h2>Portfolio</h2>
         <div class="portfolio-wrap">
-            <a href="https://footballprizes.ru/" target="_blank">
-                <div class="img-wrap"><img src="img/portfolio/lays-football.jpg" alt=""></div>
-            </a>
+            <!-- <a href="https://footballprizes.ru/" target="_blank">-->
+            <!--     <div class="img-wrap"><img src="img/portfolio/lays-football.jpg" alt=""></div>-->
+            <!-- </a>-->
             <a href="http://grenki.hrusteam.ru/" target="_blank">
                 <div class="img-wrap"><img src="img/portfolio/grenki.jpg" alt=""></div>
             </a>
-            <a href="https://станьближе.рф/" target="_blank">
-                <div class="img-wrap"><img src="img/portfolio/pepsi.jpg" alt=""></div>
-            </a>
+            <!-- <a href="https://станьближе.рф/" target="_blank">-->
+            <!--     <div class="img-wrap"><img src="img/portfolio/pepsi.jpg" alt=""></div>-->
+            <!-- </a>-->
             <!--<a href="https://newyear.lays.ru/" target="_blank">-->
-            <a href="http://dev-laysbag.devup.cc/" target="_blank">
-                <div class="img-wrap"><img src="img/portfolio/lays.jpg" alt=""></div>
-            </a>
+            <!-- <a href="http://dev-laysbag.devup.cc/" target="_blank">-->
+            <!--     <div class="img-wrap"><img src="img/portfolio/lays.jpg" alt=""></div>-->
+            <!-- </a>-->
             <a href="https://tge.selfllery.com/" target="_blank">
                 <div class="img-wrap"><img src="img/portfolio/selfllery-landing.jpg" alt=""></div>
             </a>
