--- a/index.html
+++ b/index.html
@@ -105,14 +105,15 @@
             <li>Vue.js</li>
             <li>Vuex</li>
             <li>Vue ssr / Nuxt.js</li>
-            <li>TypeScript</li>
             <li>React.js</li>
             <li>Redux</li>
             <li>HTML5</li>
             <li>CSS3 (SCSS)</li>
+            <li>Node.js</li>
             <li>Git</li>
             <li>npm</li>
             <li>ES6</li>
+            <li>TypeScript</li>
 <!--            <li>Youtube API</li>-->
 <!--            <li>Google Map API</li>-->
 <!--            <li>Google Translate API</li>-->
