--- a/index.html
+++ b/index.html
@@ -100,28 +100,46 @@
     </div>
     <div id="skills" class="skills">
         <h2>Skills</h2>
-        <ul>
-            <li>JavaScript</li>
-            <li>Vue.js</li>
-            <li>Vuex</li>
-            <li>Vue ssr / Nuxt.js</li>
-            <li>React.js</li>
-            <li>Redux</li>
-            <li>HTML5</li>
-            <li>CSS3 (SCSS)</li>
-            <li>Node.js</li>
-            <li>Git</li>
-            <li>npm</li>
-            <li>ES6</li>
-            <li>TypeScript</li>
-<!--            <li>Youtube API</li>-->
-<!--            <li>Google Map API</li>-->
-<!--            <li>Google Translate API</li>-->
-            <li>JQuery</li>
-            <li>AJAX</li>
-            <li>Gulp</li>
-            <li>Webpack</li>
-        </ul>
+        <div class="skills-wrap">
+            <div class="col">
+                <h3>Hard skills:</h3>
+                <ul>
+                    <li>JavaScript</li>
+                    <li>Vue.js</li>
+                    <li>Vuex</li>
+                    <li>Vue ssr / Nuxt.js</li>
+                    <li>React.js</li>
+                    <li>Redux</li>
+                    <li>HTML5</li>
+                    <li>CSS3 (SCSS)</li>
+                    <li>Node.js</li>
+                    <li>Git</li>
+                    <li>npm</li>
+                    <li>ES6</li>
+                    <li>TypeScript</li>
+                    <!--            <li>Youtube API</li>-->
+                    <!--            <li>Google Map API</li>-->
+                    <!--            <li>Google Translate API</li>-->
+                    <li>JQuery</li>
+                    <li>AJAX</li>
+                    <li>Gulp</li>
+                    <li>Webpack</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3>Soft skills:</h3>
+                <ul>
+                    <li>Intermediate English</li>
+                    <li>Communication skills</li>
+                    <li>Team working skills</li>
+                    <li>Planing skills</li>
+                    <li>Agile, Scrum</li>
+                    <li>Jira</li>
+                    <li>Asana</li>
+                    <li>Slack</li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <div id="experience" class="experience">
