--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </h4>
                 <h4>
                     <span class="left">English:</span>
-                    <span>intermediate</span>
+                    <span>Intermediate</span>
                 </h4>
                 <h4>
                     <span class="left">City:</span>
