--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1 class="specialization">Front-end developer. <span class="main-skills grey">Vue.js, React.js</span></h1>
     <div id="contacts" class="title">
         <div class="left">
-            <h2>Gren Valentin Igorevich</h2>
+            <h2>Gren Valentyn Igorevich</h2>
             <div class="ava-wrap">
                 <img src="img/ava.jpg" class="ava">
 <!--                <div class="ava-info">-->
@@ -85,17 +85,20 @@
     </div>
     <div id="about-me" class="about-me">
         <p class="about-me_text">
-            My name is Valik and I'm a front-end developer with 4 years of experience. I
-            develop SPA web applications using the Vue.js or React.js stack (Vue + Vuex, React + Redux).
+            My name is Valik and I'm a front-end developer with 4+ years of experience and Master of Computer Science degree. I
+            develop SPA web applications using the Vue.js or React.js stack (Vue + Vuex / React + Redux).
             I love to create supportive products, which are solving customers needs, use new
             technologies and try new approaches in development.
         </p>
         <p class="about-me_text">
-            The project I'm proud of is a social network that we developed in a small team from scratch, where I was the only <nobr>front-end developer</nobr> in the team.
-            <a href="https://selfllery.com/" target="_blank" class="about-me_text__link">https://selfllery.com/</a>
+            The project I'm proud of is a social network (selfllery - it was start-up and now closed) that we developed in a small team from scratch, where I was the only <nobr>front-end developer</nobr> in the team.
         </p>
         <p class="about-me_text">
-            Now active learn english. I go to courses in an English school in a group at an intermediate level.
+            Now I am working in Deutsch product company 
+            <a href="https://en.wikipedia.org/wiki/Plesk" target="_blank">Plesk</a>
+            in 
+            <a href="https://www.linkedin.com/company/xovi-gmbh" target="_blank">Xovi</a> 
+            team on the project - <a href="https://suite.xovi.net" target="_blank">suite.xovi.net</a>
         </p>
     </div>
     <div id="skills" class="skills">
