--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
         </p>
         <p class="about-me_text">
             Now I am working in Deutsch product company 
-            <a href="https://en.wikipedia.org/wiki/Plesk" target="_blank">Plesk</a>
+            <a href="https://en.wikipedia.org/wiki/Plesk" target="_blank" class="about-me_text__link">Plesk</a>
             in 
-            <a href="https://www.linkedin.com/company/xovi-gmbh" target="_blank">Xovi</a> 
-            team on the project - <a href="https://suite.xovi.net" target="_blank">suite.xovi.net</a>
+            <a href="https://www.linkedin.com/company/xovi-gmbh" target="_blank" class="about-me_text__link">Xovi</a> 
+            team on the project - 
+            <a href="https://suite.xovi.net" target="_blank" class="about-me_text__link">suite.xovi.net</a>
         </p>
     </div>
     <div id="skills" class="skills">
