--- a/index.html
+++ b/index.html
@@ -85,142 +85,144 @@
     </div>
     <div id="about-me" class="about-me">
         <p class="about-me_text">
-            My name is Valik and I'm a front-end developer with 4+ years of experience and Master of Computer Science degree. I
-            develop SPA web applications using the Vue.js or React.js stack (Vue + Vuex / React + Redux).
-            I love to create supportive products, which are solving customers needs, use new
-            technologies and try new approaches in development.
+            My name is Valik and I'm a front-end developer with 5 years of experience and Master of Computer Science degree. I
+            develop SPA web applications using the Vue.js or React.js stack (Vue + Vuex / React + Redux). <span class="grey">// Prefer Vue stack.</span>
         </p>
         <p class="about-me_text">
-            The project I'm proud of is a social network (selfllery - it was start-up and now closed) that we developed in a small team from scratch, where I was the only <nobr>front-end developer</nobr> in the team.
+            The project I'm proud of is a social network (selfllery - it was start-up and now closed) that we developed in a small team from scratch, where I was the only one <nobr>front-end developer</nobr> in the team.
         </p>
         <p class="about-me_text">
-            Now I am working in Deutsch product company 
-            <a href="https://en.wikipedia.org/wiki/Plesk" target="_blank" class="about-me_text__link">Plesk</a>
-            in 
-            <a href="https://www.linkedin.com/company/xovi-gmbh" target="_blank" class="about-me_text__link">Xovi</a> 
-            team on the project - 
+            Now I am working in Deutsch product company
+            <a href="https://www.linkedin.com/company/xovi-gmbh" target="_blank" class="about-me_text__link">Xovi</a>
+            on the project -
             <a href="https://suite.xovi.net" target="_blank" class="about-me_text__link">suite.xovi.net</a>
         </p>
     </div>
+
+    <div id="experience" class="experience">
+        <h2>Experience <span class="grey"> (5 years)</span></h2>
+        <div class="row">
+            <div class="left xovi">
+                <img src="img/logo-xovi.png" alt="">
+                <p class="bold company">XOVI GmbH</p>
+            </div>
+            <div class="right">
+                <h3>Middle+ Front-End Developer <span class="position-details">(Vue / React)</span></h3>
+                <p class="grey position-time">
+                    Dec 2019 - present time
+                </p>
+                <p class="description">
+                    <b>Product company</b>. <br>
+                    <b>Stack:</b> <span class="description-stack">JavaScript, Vue.js, Vuetify, Vuex, React.js, Material UI, SCSS , REST API, Jest, TDD, Kanban, Planing/Time tracking/Steering, Figma, GitLab.</span>
+                </p>
+            </div>
+            <span class="position-time-absolute">11 months</span>
+        </div>
+        <div class="row">
+            <div class="left selfllery">
+                <svg data-name="Слой 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 103.12 103.12"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:none;}.cls-3{fill:#a9da3a;}.cls-10,.cls-11,.cls-12,.cls-13,.cls-14,.cls-15,.cls-16,.cls-17,.cls-18,.cls-3,.cls-4,.cls-5,.cls-6,.cls-7,.cls-8,.cls-9{isolation:isolate;}.cls-4{fill:#49809a;}.cls-5{fill:#7cdb5b;}.cls-6{fill:#b05fe6;}.cls-7{fill:#8560eb;}.cls-8{fill:#7f43f9;}.cls-9{fill:#b233f9;}.cls-10{fill:#c22e2c;}.cls-11{fill:#e9a657;}.cls-12{fill:#e06f27;}.cls-13{fill:#f9eb65;}.cls-14{fill:#fdfa3e;}.cls-15{fill:#f2d049;}.cls-16{fill:#6f9ffb;}.cls-17{fill:#6372fa;}.cls-18{fill:#8362fa;}</style></defs><title>logo</title><path class="cls-1" d="M102.13,61.84l-5.27-5.27V25.51a2.32,2.32,0,0,0-2.32-2.32H87.09l-22-22a2.32,2.32,0,0,0-3.29,0L56.57,6.5H25.51a2.32,2.32,0,0,0-2.32,2.32v7.45l-22,22a2.32,2.32,0,0,0,0,3.29L6.5,46.79V77.85a2.32,2.32,0,0,0,2.32,2.32h7.45l22,22a2.32,2.32,0,0,0,3.29,0l5.27-5.27H77.85a2.32,2.32,0,0,0,2.32-2.32V87.09l22-22A2.32,2.32,0,0,0,102.13,61.84ZM63.48,56.57l-6.91,6.91H46.79l-6.91-6.91V46.79l6.91-6.91h9.78l6.91,6.91Z"/><polygon class="cls-2" points="56.57 39.88 46.79 39.88 39.88 46.79 39.88 46.79 39.88 56.57 46.79 63.48 56.57 63.48 63.48 56.57 63.48 46.79 56.57 39.88"/><path class="cls-3" d="M63.48,46.79V25.51a2.32,2.32,0,0,1,2.32-2.32H87.09l-22-22a2.32,2.32,0,0,0-3.29,0L56.57,6.5V39.88Z"/><path class="cls-4" d="M56.57,39.88l-15-15a2.32,2.32,0,0,1,0-3.29l15-15H25.51a2.32,2.32,0,0,0-2.32,2.32v7.45l23.6,23.6Z"/><path class="cls-5" d="M41.52,24.83l15,15V6.5l-15,15A2.32,2.32,0,0,0,41.52,24.83Z"/><path class="cls-6" d="M46.79,39.88H25.51a2.32,2.32,0,0,1-2.32-2.32V16.28l-22,22a2.32,2.32,0,0,0,0,3.29L6.5,46.79H39.88Z"/><path class="cls-7" d="M25.51,39.88H46.79l-23.6-23.6V37.56A2.32,2.32,0,0,0,25.51,39.88Z"/><path class="cls-8" d="M39.88,46.79h0l-15,15a2.32,2.32,0,0,1-3.29,0l-15-15V77.85a2.32,2.32,0,0,0,2.32,2.32h7.45l23.6-23.6Z"/><path class="cls-9" d="M24.83,61.84l15-15H6.5l15,15A2.32,2.32,0,0,0,24.83,61.84Z"/><path class="cls-10" d="M46.79,63.48l15,15a2.32,2.32,0,0,1,0,3.29l-15,15H77.85a2.32,2.32,0,0,0,2.32-2.32V87.09l-23.6-23.6Z"/><path class="cls-11" d="M102.13,61.84l-5.27-5.27H63.48l-6.91,6.91H77.85a2.32,2.32,0,0,1,2.32,2.32V87.09l22-22A2.32,2.32,0,0,0,102.13,61.84Z"/><path class="cls-12" d="M77.85,63.48H56.57l23.6,23.6V65.81A2.32,2.32,0,0,0,77.85,63.48Z"/><path class="cls-13" d="M63.48,56.57l15-15a2.32,2.32,0,0,1,3.29,0l15,15V25.51a2.32,2.32,0,0,0-2.32-2.32H87.09l-23.6,23.6Z"/><path class="cls-14" d="M63.48,25.51V46.79l23.6-23.6H65.81A2.32,2.32,0,0,0,63.48,25.51Z"/><path class="cls-15" d="M78.53,41.52l-15,15H96.86l-15-15A2.32,2.32,0,0,0,78.53,41.52Z"/><path class="cls-16" d="M39.88,56.57V77.85a2.32,2.32,0,0,1-2.32,2.32H16.28l22,22a2.32,2.32,0,0,0,3.29,0l5.27-5.27V63.48Z"/><path class="cls-17" d="M39.88,77.85V56.57l-23.6,23.6H37.56A2.32,2.32,0,0,0,39.88,77.85Z"/><path class="cls-18" d="M61.84,78.53l-15-15V96.86l15-15A2.32,2.32,0,0,0,61.84,78.53Z"/></svg>
+                <p class="bold company">Selfllery</p>
+            </div>
+            <div class="right">
+                <h3>Middle Front-End Developer <span class="position-details">(Vue / React)</span></h3>
+                <p class="grey position-time">
+                    Dec 2017 - Dec 2019
+                </p>
+                <p class="description">
+                    <b>Start-up company</b>. <br>
+                    <b>Stack:</b> <span class="description-stack">Vue.js, Vuex, Vue SSR on Node.js, React.js, JavaScript, HTML, CSS/SCSS , WebSockets, REST API, Scrum, <nobr>Planing/Time tracking,</nobr> Zeplin, GitHub</span>
+                </p>
+            </div>
+            <span class="position-time-absolute">2 years</span>
+        </div>
+
+        <div class="row">
+            <div class="left develup">
+                <img src="img/logo-develup.png" alt="">
+                <p class="bold company">Develup</p>
+            </div>
+            <div class="right">
+                <h3>Junior+ / Middle Front-End Developer <span class="position-details">(Vue)</span></h3>
+                <p class="grey position-time">
+                    Oct 2016&nbsp;&nbsp;-&nbsp;&nbsp;Dec 2017
+                </p>
+                <p class="description">
+                    <b>Outsource company</b>. <br>
+                    <b>Stack:</b> <span class="description-stack">Vue.js, JavaScript, HTML, CSS/SCSS , jQuery, Photoshop, Pixel Perfect, SFTP/GitLab</span>
+                </p>
+            </div>
+            <span class="position-time-absolute">1 year 2 months</span>
+        </div>
+        <div class="row">
+            <div class="left photoliga">
+                <img src="img/photoliga.png" alt="">
+                <p class="bold company">Photoliga</p>
+            </div>
+            <div class="right">
+                <h3>Junior Front-End Developer <span class="position-details">(HTML/CSS, jQuery)</span></h3>
+                <p class="grey position-time">
+                    Dev 2015 - Sep 2016
+                </p>
+                <p class="description">
+                    <b>WEB Studio company</b>. <br>
+                    <b>Stack:</b> <span class="description-stack">HTML, CSS/SCSS, JavaScript, jQuery, CMS WordPress / OpenCart, Photoshop, FTP/Bitbucket</span>
+                </p>
+                <span class="position-time-absolute">10 months</span>
+            </div>
+        </div>
+
+        <!--         <div class="row">
+                    <div class="left wave">
+                        <img src="img/klima.png" alt="">
+                    </div>
+                    <div class="right">
+                        <h4>Web Developer</h4>
+                        <p class="bold company">Klima hitze</p>
+                        <p class="grey">
+                            March 2016 - June 2016
+                            <span class="black bold">5 months</span>
+                        </p>
+                    </div>
+                </div> -->
+    </div>
+
+
     <div id="skills" class="skills">
         <h2>Skills</h2>
         <div class="skills-wrap">
             <div class="col">
                 <h3>Hard skills:</h3>
                 <ul>
-                    <li>JavaScript</li>
-                    <li>Vue.js</li>
-                    <li>Vuex</li>
-                    <li>Vue ssr / Nuxt.js</li>
-                    <li>React.js</li>
-                    <li>Redux</li>
-                    <li>HTML5</li>
-                    <li>CSS3 (SCSS)</li>
-                    <li>Node.js</li>
-                    <li>Git</li>
-                    <li>npm</li>
-                    <li>ES6</li>
-                    <li>TypeScript</li>
-                    <!--            <li>Youtube API</li>-->
-                    <!--            <li>Google Map API</li>-->
-                    <!--            <li>Google Translate API</li>-->
+                    <li>JavaScript (ES6) & TypeScript</li>
+                    <li>Vue.js, Vuex</li>
+                    <li>Vuetify, vue-material</li>
+                    <li>Vue ssr on Node.js, Nuxt.js</li>
+                    <li>Vue CLI, create-react-app</li>
+                    <li>React.js, Redux</li>
+                    <li>HTML5, CSS3 (SCSS)</li>
+                    <li>Responsive, Flexible, PixelPerfect, Mobile First / Desktop First, <br> sizes on 'em' with resize or on 'px' with media queries</li>
+                    <li>Node.js, npm</li>
                     <li>JQuery</li>
-                    <li>AJAX</li>
-                    <li>Gulp</li>
-                    <li>Webpack</li>
+                    <li>Unit tests (Jest) & TDD</li>
+                    <li>Webpack, Gulp</li>
+                    <li>Git (github, gitlab, bitbucket)</li>
+                    <li>Figma, Zeplin, Photoshop</li>
                 </ul>
             </div>
-            <div class="col">
+            <div class="col soft-skills">
                 <h3>Soft skills:</h3>
                 <ul>
+                    <li>Responsible for their work</li>
                     <li>Intermediate English</li>
-                    <li>Communication skills</li>
-                    <li>Team working skills</li>
-                    <li>Planing skills</li>
-                    <li>Agile, Scrum</li>
-                    <li>Jira</li>
-                    <li>Asana</li>
-                    <li>Slack</li>
+                    <li>Planing, Time tracking, Steering skills</li>
+                    <li>Team player</li>
+                    <li>Scrum, Kanban</li>
+                    <li>Jira, Assana, Slack</li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <div id="experience" class="experience">
-        <h2>Experience <span class="grey"> (4 years)</span></h2>
-        <div class="row">
-            <div class="left selfllery">
-                <svg data-name="Слой 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 103.12 103.12"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:none;}.cls-3{fill:#a9da3a;}.cls-10,.cls-11,.cls-12,.cls-13,.cls-14,.cls-15,.cls-16,.cls-17,.cls-18,.cls-3,.cls-4,.cls-5,.cls-6,.cls-7,.cls-8,.cls-9{isolation:isolate;}.cls-4{fill:#49809a;}.cls-5{fill:#7cdb5b;}.cls-6{fill:#b05fe6;}.cls-7{fill:#8560eb;}.cls-8{fill:#7f43f9;}.cls-9{fill:#b233f9;}.cls-10{fill:#c22e2c;}.cls-11{fill:#e9a657;}.cls-12{fill:#e06f27;}.cls-13{fill:#f9eb65;}.cls-14{fill:#fdfa3e;}.cls-15{fill:#f2d049;}.cls-16{fill:#6f9ffb;}.cls-17{fill:#6372fa;}.cls-18{fill:#8362fa;}</style></defs><title>logo</title><path class="cls-1" d="M102.13,61.84l-5.27-5.27V25.51a2.32,2.32,0,0,0-2.32-2.32H87.09l-22-22a2.32,2.32,0,0,0-3.29,0L56.57,6.5H25.51a2.32,2.32,0,0,0-2.32,2.32v7.45l-22,22a2.32,2.32,0,0,0,0,3.29L6.5,46.79V77.85a2.32,2.32,0,0,0,2.32,2.32h7.45l22,22a2.32,2.32,0,0,0,3.29,0l5.27-5.27H77.85a2.32,2.32,0,0,0,2.32-2.32V87.09l22-22A2.32,2.32,0,0,0,102.13,61.84ZM63.48,56.57l-6.91,6.91H46.79l-6.91-6.91V46.79l6.91-6.91h9.78l6.91,6.91Z"/><polygon class="cls-2" points="56.57 39.88 46.79 39.88 39.88 46.79 39.88 46.79 39.88 56.57 46.79 63.48 56.57 63.48 63.48 56.57 63.48 46.79 56.57 39.88"/><path class="cls-3" d="M63.48,46.79V25.51a2.32,2.32,0,0,1,2.32-2.32H87.09l-22-22a2.32,2.32,0,0,0-3.29,0L56.57,6.5V39.88Z"/><path class="cls-4" d="M56.57,39.88l-15-15a2.32,2.32,0,0,1,0-3.29l15-15H25.51a2.32,2.32,0,0,0-2.32,2.32v7.45l23.6,23.6Z"/><path class="cls-5" d="M41.52,24.83l15,15V6.5l-15,15A2.32,2.32,0,0,0,41.52,24.83Z"/><path class="cls-6" d="M46.79,39.88H25.51a2.32,2.32,0,0,1-2.32-2.32V16.28l-22,22a2.32,2.32,0,0,0,0,3.29L6.5,46.79H39.88Z"/><path class="cls-7" d="M25.51,39.88H46.79l-23.6-23.6V37.56A2.32,2.32,0,0,0,25.51,39.88Z"/><path class="cls-8" d="M39.88,46.79h0l-15,15a2.32,2.32,0,0,1-3.29,0l-15-15V77.85a2.32,2.32,0,0,0,2.32,2.32h7.45l23.6-23.6Z"/><path class="cls-9" d="M24.83,61.84l15-15H6.5l15,15A2.32,2.32,0,0,0,24.83,61.84Z"/><path class="cls-10" d="M46.79,63.48l15,15a2.32,2.32,0,0,1,0,3.29l-15,15H77.85a2.32,2.32,0,0,0,2.32-2.32V87.09l-23.6-23.6Z"/><path class="cls-11" d="M102.13,61.84l-5.27-5.27H63.48l-6.91,6.91H77.85a2.32,2.32,0,0,1,2.32,2.32V87.09l22-22A2.32,2.32,0,0,0,102.13,61.84Z"/><path class="cls-12" d="M77.85,63.48H56.57l23.6,23.6V65.81A2.32,2.32,0,0,0,77.85,63.48Z"/><path class="cls-13" d="M63.48,56.57l15-15a2.32,2.32,0,0,1,3.29,0l15,15V25.51a2.32,2.32,0,0,0-2.32-2.32H87.09l-23.6,23.6Z"/><path class="cls-14" d="M63.48,25.51V46.79l23.6-23.6H65.81A2.32,2.32,0,0,0,63.48,25.51Z"/><path class="cls-15" d="M78.53,41.52l-15,15H96.86l-15-15A2.32,2.32,0,0,0,78.53,41.52Z"/><path class="cls-16" d="M39.88,56.57V77.85a2.32,2.32,0,0,1-2.32,2.32H16.28l22,22a2.32,2.32,0,0,0,3.29,0l5.27-5.27V63.48Z"/><path class="cls-17" d="M39.88,77.85V56.57l-23.6,23.6H37.56A2.32,2.32,0,0,0,39.88,77.85Z"/><path class="cls-18" d="M61.84,78.53l-15-15V96.86l15-15A2.32,2.32,0,0,0,61.84,78.53Z"/></svg>
-            </div>
-            <div class="right">
-                <h4>Front-end Developer</h4>
-                <p class="bold company">Selfllery</p>
-                <p class="grey">
-                    March 2018 - present time
-                    <span class="black bold">1 year 7 months</span>
-                </p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="left develup">
-                <svg viewBox="0 0 194 22">
-                    <path d="M18.4 12c-.7 2-3 3.5-6.9 3.5H8.4V5.3L.4 0v21h12.5c5.8 0 9.7-1.8 11.9-4.7L18.4 12z"
-                          class="logo-white"></path>
-                    <path fill-rule="evenodd" fill="#FFE700"
-                          d="M24.8 16.3c1.2-1.7 1.8-3.6 1.8-5.8C26.6 5 22.5 0 14 0H.4l8.1 5.4h3.1c5.5 0 7 2.3 7 5.2 0 .5-.1 1-.3 1.5l6.5 4.2z"
-                          class="logo-yellow"></path>
-                </svg>
-            </div>
-            <div class="right">
-                <h4>Front-end Developer, Vue.js</h4>
-                <p class="bold company">Develup</p>
-                <p class="grey">
-                    June 2017 - May 2018
-                    <span class="black bold">1 year</span>
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="left">
-                <img src="img/photoliga.png" alt="">
-            </div>
-            <div class="right">
-                <h4>Front-end Developer</h4>
-                <p class="bold company">Photoliga</p>
-                <p class="grey">
-                    July 2016 - June 2017
-                    <span class="black bold">1 year</span>
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="left wave">
-                <img src="img/wave.png" alt="">
-            </div>
-            <div class="right">
-                <h4>Front-end Developer</h4>
-                <p class="bold company">Wave agency</p>
-                <p class="grey">
-                    Feb 2016 - June 2016
-                    <span class="black bold">6 months</span>
-                </p>
-            </div>
-        </div>
-<!--         <div class="row">
-            <div class="left wave">
-                <img src="img/klima.png" alt="">
-            </div>
-            <div class="right">
-                <h4>Web Developer</h4>
-                <p class="bold company">Klima hitze</p>
-                <p class="grey">
-                    March 2016 - June 2016
-                    <span class="black bold">5 months</span>
-                </p>
-            </div>
-        </div> -->
-    </div>
     <div id="education" class="education experience">
         <h2>Education</h2>
         <div class="row">
@@ -247,7 +249,52 @@
                 </p>
             </div>
         </div>
+    </div>
 
+    <div id="portfolio">
+        <h2>Projects where I worked <span class="grey"> // small portfolio</span></h2>
+        <p>
+            I've worked on 30+ projects in my career. From small Landing pages to big SaaS platforms and social network project.<br>
+            Unfortunately, my best projects are no longer in production :(
+            <!-- like <a href="https://sellfllery.com">sellfllery.com</a> or <a href="https://станьближе.рф">станьближе.рф</a><br> -->
+            <br>
+            Below are the projects that are still in production.
+        </p>
+        <ul>
+            <li>
+                <a href="https://suite.xovi.net">https://suite.xovi.net</a>
+            </li>
+            <li>
+                <a href="https://block.science">https://block.science</a>
+            </li>
+            <li>
+                <a href="https://newyear.lays.ru">https://newyear.lays.ru</a>
+            </li>
+            <li>
+                <a href="https://potato.lays.ru/login">https://potato.lays.ru</a>
+            </li>
+            <li>
+                <a href="https://dunlop-tire.ru/ftm#promo">https://dunlop-tire.ru</a>
+            </li>
+            <li>
+                <a href="https://www.atlanta.ua">https://www.atlanta.ua</a>
+            </li>
+            <li>
+                <a href="http://shopping.wmj.ru/">http://shopping.wmj.ru</a>
+            </li>
+            <li>
+                <a href="http://klima-hitze.com.ua">http://klima-hitze.com.ua</a>
+            </li>
+            <li>
+                <a href="https://fiskars.org.ua">https://fiskars.org.ua</a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/watch?v=MFANJBJim24">https://www.youtube.com/watch?v=MFANJBJim24</a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/watch?v=sJDuHji2N50">https://www.youtube.com/watch?v=sJDuHji2N50</a>
+            </li>
+        </ul>
     </div>
 </div>
 </body>
