--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="left">
             <h2>Gren Valentyn Igorevich</h2>
             <div class="ava-wrap">
-                <img src="img/ava-new-square.jpg" class="ava">
+                <img src="img/ava-new_square.jpg" class="ava">
 <!--                <div class="ava-info">-->
 <!--                    <p class="left">25 age</p>-->
 <!--                    <p class="right">Odessa</p>-->
