--- a/index.html
+++ b/index.html
@@ -85,17 +85,10 @@
     </div>
     <div id="about-me" class="about-me">
         <p class="about-me_text">
-            My name is Valik and I'm a front-end developer with 5+ years of experience and Master of Computer Science degree. I
-            develop SPA web applications using the Vue.js stack (Vue + Vuex...).
+            I am an experienced front-end developer more than 6 years of commercial experience and Master of Computer Science degree.
         </p>
         <p class="about-me_text">
-            The project I'm proud of is a social network (selfllery - it was start-up and now closed) that we developed in a small team from scratch, where I was the only one <nobr>front-end developer</nobr> in the team.
-        </p>
-        <p class="about-me_text">
-            Now I work in a German product company
-            <a href="https://www.linkedin.com/company/xovi-gmbh" target="_blank" class="about-me_text__link">Xovi</a>
-            on the project -
-            <a href="https://suite.xovi.net" target="_blank" class="about-me_text__link">suite.xovi.net</a>
+            I have experience in a lead position and additional to good hard skills I also have not bad soft skills (communication with customers/product side, organization of processes in my team, prepare product oriented roadmap).
         </p>
     </div>
 
