--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="CV. Front-end developer. Valik Gren">
     <meta name="Keywords" content="Front-end, Front, CV, Резюме, Valik Gren, Vue.js">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="css/main.css?v2.0">
 </head>
 <body>
@@ -21,10 +22,10 @@
 <!--    </nav>-->
 <!--</header>-->
 <div class="container">
-    <h1 class="specialization">Front-end developer. <span class="main-skills grey">Vue.js, React.js</span></h1>
+    <h1 class="specialization">Senior/Lead Front-end<span class="main-skills grey">Vue.js, React.js</span></h1>
     <div id="contacts" class="title">
         <div class="left">
-            <h2>Gren Valentyn Igorevich</h2>
+            <h2>Valentyn Gren</h2>
             <div class="ava-wrap">
                 <img src="img/ava-new_square.jpg" class="ava">
 <!--                <div class="ava-info">-->
@@ -35,15 +36,15 @@
             <div class="info">
                 <h4>
                     <span class="left">Age:</span>
-                    <span>27</span>
+                    <span>28</span>
                 </h4>
                 <h4>
                     <span class="left">English:</span>
                     <span>Intermediate</span>
                 </h4>
                 <h4>
-                    <span class="left">City:</span>
-                    <span>Odessa</span>
+                    <span class="left">Location:</span>
+                    <span>Remote</span>
                 </h4>
             </div>
         </div>
@@ -60,6 +61,7 @@
             <div class="row">
                 <div class="left">
                     <img src="img/phone.png" alt="">
+                    <i class="mdi mdi-phone"></i>
                 </div>
                 <div class="right">
                     <a href="tel:+380938031014">+380938031014</a>
@@ -88,7 +90,7 @@
             I am an experienced front-end developer more than 6 years of commercial experience and Master of Computer Science degree.
         </p>
         <p class="about-me_text">
-            I have experience in a lead position and additional to good hard skills I also have not bad soft skills (communication with customers/product side, organization of processes in my team, prepare product oriented roadmap).
+            I have experience in a lead position and additional to great hard skills I also have good soft skills (communication with customers/product side, organization of processes in my team, preparing product oriented roadmap).
         </p>
     </div>
 
