--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h3>Contacts:</h3>
             <div class="row">
                 <div class="left">
-                    <img src="img/email.png" alt="">
+                    <i class="mdi mdi-email"></i>
                 </div>
                 <div class="right">
                     <a href="mailto:valikgreen@gmail.com">valikgreen@gmail.com</a>
@@ -56,24 +56,23 @@
             </div>
             <div class="row">
                 <div class="left">
-                    <img src="img/phone.png" alt="">
                     <i class="mdi mdi-phone"></i>
                 </div>
                 <div class="right">
                     <a href="tel:+380938031014">+380938031014</a>
                 </div>
             </div>
+<!--            <div class="row">-->
+<!--                <div class="left">-->
+<!--                    <img src="img/skype.png" alt="">-->
+<!--                </div>-->
+<!--                <div class="right">-->
+<!--                    <a href="skype:waleeex">waleeex</a>-->
+<!--                </div>-->
+<!--            </div>-->
             <div class="row">
                 <div class="left">
-                    <img src="img/skype.png" alt="">
-                </div>
-                <div class="right">
-                    <a href="skype:waleeex">waleeex</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="left">
-                    <img src="img/linkedin.png" alt="">
+                    <i class="mdi mdi-linkedin"></i>
                 </div>
                 <div class="right">
                     <a href="https://www.linkedin.com/in/valikgren/" target="_blank">linkedin.com/in/valikgren</a>
