top section adjustments

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h1 class="specialization">Senior/Lead Front-end <span class="main-skills grey">(Vue.js, React.js)</span></h1>
     <div id="contacts" class="title">
         <div class="left">
-            <h2>Valentyn Gren</h2>
+            <h1 class="name">Valentyn Gren</h1>
             <div class="ava-wrap">
                 <img src="img/ava-new_square.jpg" class="ava">
                 <div class="info">
