--- a/index.html
+++ b/index.html
@@ -82,13 +82,18 @@
     </div>
     <div id="about-me" class="about-me">
         <p class="about-me_text">
-            I am an experienced front-end developer more than 6 years of commercial experience and Master of Computer
-            Science degree.
+            I am an experienced Front-End Developer with more than 6 years of commercial experience and Master of Computer Science degree.
+            During my career I have worked with dozens of different projects with different team structures (I have experience both as the only front-end developer in a team and also in a team with other front-end developers).
+            I have experience with huge high-load system with microservice architecture on Front-end part.
+            I have experience working on projects from scratch with the construction of architecture.
         </p>
         <p class="about-me_text">
-            I have experience in a lead position and additional to great hard skills I also have good soft skills
-            (communication with customers/product side, organization of processes in my team, preparing product oriented
-            roadmap).
+            I have experience in a Lead position. Additional to great hard skills I also have good soft skills
+            (communication with customers, organization of processes in team, preparing project roadmap and project management responsibilities).
+        </p>
+        <p class="about-me_text">
+            Also I have experience in mentoring Front-end guys from trainee with no experience to Junior+/Middle.
+            There were 2 successful cases in my career.
         </p>
     </div>
 
