--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <p class="about-me_text">
             I am an experienced <strong>Front-End Developer</strong> with more than <strong>6 years</strong> of commercial experience and <strong>Master of Computer Science</strong> degree.<br>
             During my career I have worked with dozens of different projects with different team structures (I have experience both as the only front-end developer in a team and also in a team with other front-end developers).<br>
-            I have experience with huge <strong>high-load</strong> system with <strong>microservices<strong> architecture on Front-end part.<br>
+            I have experience with huge <strong>high-load</strong> system with <strong>microservices</strong> architecture on Front-end part.<br>
             I have experience working on projects <strong>from scratch</strong> with the construction of architecture.
         </p>
         <p class="about-me_text">
