--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Front-end developer</title>
@@ -82,7 +82,7 @@
     </div>
     <div id="about-me" class="about-me">
         <p class="about-me_text">
-            I am an experienced <strong>Front-End Developer</strong> with more than <strong>6 years</strong> of commercial experience and <strong>Master of Computer Science</strong> degree.<br>
+            I am an experienced <strong>Front-End Developer</strong> with more than <strong>6 years</strong> of commercial experience and <nobr><strong>Master of Computer Science</strong></nobr> degree.<br>
             During my career I have worked with dozens of different projects with different team structures (I have experience both as the only front-end developer in a team and also in a team with other front-end developers).<br>
             I have experience with huge <strong>high-load</strong> system with <strong>microservices</strong> architecture on Front-end part.<br>
             I have experience working on projects <strong>from scratch</strong> with the construction of architecture.
