--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <div id="experience" class="experience">
-        <h2>Experience <span class="grey"> (5 years)</span></h2>
+        <h2>Experience <span class="grey"> (6+ years)</span></h2>
         <div class="row">
             <div class="left xovi">
                 <img src="img/logo-xovi.png" alt="">
@@ -114,7 +114,7 @@
                     <b>Stack:</b> <span class="description-stack">JavaScript, Vue.js, Vuetify, Vuex, React.js, Material UI, SCSS , REST API, Jest, TDD, Kanban, Planing/Time tracking/Steering, Figma, GitLab.</span>
                 </p>
             </div>
-            <span class="position-time-absolute">1 year 4 months</span>
+            <span class="position-time-absolute">2 years</span>
         </div>
         <div class="row">
             <div class="left selfllery">
