--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
     </div>
     <div id="about-me" class="about-me">
         <p class="about-me_text">
-            <p class="about-me_text-inner">I am an experienced <strong>Front-End Developer</strong> with more than <strong>6 years</strong> of commercial experience and <nobr><strong>Master of Computer Science</strong></nobr> degree.</p>
+            <p class="about-me_text-inner">I am an experienced <strong>Front-End</strong> Developer with more than <strong>6 years</strong> of commercial experience and <nobr><strong>Master of Computer Science</strong></nobr> degree.</p>
+        </p>
+        <p class="about-me_text">
             <p class="about-me_text-inner">During my career I have worked with dozens of different projects with different team structures and have experience both as the only front-end developer in a team and also in a team with other front-end developers.</p>
             <p class="about-me_text-inner">I have experience with huge <strong>high-load</strong> system with <strong>microservices</strong> architecture on Front-end part.</p>
             <p class="about-me_text-inner">I have experience working on projects <strong>from scratch</strong> with the construction of architecture.</p>
