--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div class="right">
                 <h3>Junior Front-End Developer <span class="position-details">(HTML/CSS, jQuery)</span></h3>
                 <p class="grey position-time">
-                    Dev 2015 - Sep 2016
+                    Dec 2015 - Sep 2016
                 </p>
                 <p class="description">
                     <b>WEB Studio company</b>. <br>
