--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <p class="bold company">XOVI GmbH</p>
             </div>
             <div class="right">
-                <h3>Middle+ Front-End Developer <span class="position-details">(Vue / React)</span></h3>
+                <h3>Lead/Senior Front-End <span class="position-details">(Vue / React)</span></h3>
                 <p class="grey position-time">
                     Dec 2019 - present time
                 </p>
@@ -116,7 +116,7 @@
                     <b>Stack:</b> <span class="description-stack">JavaScript, Vue.js, Vuetify, Vuex, React.js, Material UI, SCSS , REST API, Jest, TDD, Kanban, Planing/Time tracking/Steering, Figma, GitLab.</span>
                 </p>
             </div>
-            <span class="position-time-absolute">2 years</span>
+            <span class="position-time-absolute">2 years 6 months</span>
         </div>
         <div class="row">
             <div class="left selfllery">
