--- a/index.html
+++ b/index.html
@@ -364,37 +364,40 @@
         <h2>Projects where I worked <span class="grey"> // small portfolio</span></h2>
         <p>
             I've worked on 30+ projects in my career. From small Landing pages to big SaaS platforms and social network
-            project.<br>
-            Unfortunately, my best projects are no longer in production :(
+            projects.<br>
+            Unfortunately, a lot of projects are no longer in production :(
             <!-- like <a href="https://sellfllery.com">sellfllery.com</a> or <a href="https://станьближе.рф">станьближе.рф</a><br> -->
             <br>
             Below are the projects that are still in production.
         </p>
         <ul>
             <li>
+                <a href="https://seo.cpanel.com">https://suite.xovi.net</a>
+            </li>
+            <li>
                 <a href="https://suite.xovi.net">https://suite.xovi.net</a>
             </li>
             <li>
                 <a href="https://block.science">https://block.science</a>
             </li>
-            <li>
-                <a href="https://newyear.lays.ru">https://newyear.lays.ru</a>
-            </li>
-            <li>
-                <a href="https://potato.lays.ru/login">https://potato.lays.ru</a>
-            </li>
-            <li>
-                <a href="https://dunlop-tire.ru/ftm#promo">https://dunlop-tire.ru</a>
-            </li>
+<!--            <li>-->
+<!--                <a href="https://newyear.lays.ru">https://newyear.lays.ru</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a href="https://potato.lays.ru/login">https://potato.lays.ru</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a href="https://dunlop-tire.ru/ftm#promo">https://dunlop-tire.ru</a>-->
+<!--            </li>-->
             <li>
                 <a href="https://www.atlanta.ua">https://www.atlanta.ua</a>
             </li>
-            <li>
-                <a href="http://shopping.wmj.ru/">http://shopping.wmj.ru</a>
-            </li>
-            <li>
-                <a href="http://klima-hitze.com.ua">http://klima-hitze.com.ua</a>
-            </li>
+<!--            <li>-->
+<!--                <a href="http://shopping.wmj.ru/">http://shopping.wmj.ru</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a href="http://klima-hitze.com.ua">http://klima-hitze.com.ua</a>-->
+<!--            </li>-->
             <li>
                 <a href="https://fiskars.org.ua">https://fiskars.org.ua</a>
             </li>
