--- a/index.html
+++ b/index.html
@@ -114,6 +114,19 @@
                 <p class="description">
                     <b>Product company</b>. <br>
                     <b>Stack:</b> <span class="description-stack">JavaScript, Vue.js, Vuetify, Vuex, React.js, Material UI, SCSS , REST API, Jest, TDD, Kanban, Planing/Time tracking/Steering, Figma, GitLab.</span>
+                    <br><br>
+                    <span class="description-stack">The main task for me is to create a new front-end version from scratch with a modern SPA architecture for a product that has already been on the market for 10 years.
+                        I am responsible for all new front-end on the project and migration from old front-end to new.</span>
+                    <br><br>
+                    <b>Responsobilities:</b>
+                    <ul>
+                        <li>Writing code :)</li>
+                        <li>Creation of the frontent architecture of the project (multi-lang, multi-brands, micro-frontend)</li>
+                        <li>Hire and orginize front-end team</li>
+                        <li>Planing roadmap, routine meetings with Product owner & Product manager</li>
+                        <li>Code reviewe, grooming, check team work, auto tests</li>
+                    </ul>
+
                 </p>
             </div>
             <span class="position-time-absolute">2 years 10 months</span>
