--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         I am responsible for all new front-end on the project and migration from old front-end to new.</span>
                     <br><br>
                     <b>Responsobilities:</b>
-                    <ul>
+                    <ul class="class="description-stack"">
                         <li>Writing code :)</li>
                         <li>Creation of the frontent architecture of the project (multi-lang, multi-brands, micro-frontend)</li>
                         <li>Hire and orginize front-end team</li>
