--- a/index.html
+++ b/index.html
@@ -115,11 +115,12 @@
                     <b>Product company</b>. <br>
                     <b>Stack:</b> <span class="description-stack">JavaScript, Vue.js, Vuetify, Vuex, React.js, Material UI, SCSS , REST API, Jest, TDD, Kanban, Planing/Time tracking/Steering, Figma, GitLab.</span>
                     <br><br>
+                    <b>Description:</b>
                     <span class="description-stack">The main task for me is to create a new front-end version from scratch with a modern SPA architecture for a product that has already been on the market for 10 years.
                         I am responsible for all new front-end on the project and migration from old front-end to new.</span>
-                    <br><br>
+                    <br>
                     <b>Responsobilities:</b>
-                    <ul class="class="description-stack"">
+                    <ul class="class="description"">
                         <li>Writing code :)</li>
                         <li>Creation of the frontent architecture of the project (multi-lang, multi-brands, micro-frontend)</li>
                         <li>Hire and orginize front-end team</li>
