--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
                         <li>Planing roadmap, routine meetings with Product owner & Product manager</li>
                         <li>Code reviewe, grooming, check team work, auto tests</li>
                     </ul>
-
                 </p>
             </div>
             <span class="position-time-absolute">2 years 10 months</span>
@@ -252,6 +251,9 @@
                 <p class="description">
                     <b>Start-up company</b>. <br>
                     <b>Stack:</b> <span class="description-stack">Vue.js, Vuex, Vue SSR on Node.js, React.js, JavaScript, HTML, CSS/SCSS , WebSockets, REST API, Scrum, <nobr>Planing/Time tracking,</nobr> Zeplin, GitHub</span>
+                    <br><br>
+                    <b>Description:</b>
+                    <span class="description-stack">The main goal for me there was to create front-end part of MVP for social network from scratch</span>
                 </p>
             </div>
             <span class="position-time-absolute">2 years</span>
