--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         I am responsible for all new front-end on the project and migration from old front-end to new.</span>
                     <br>
                     <b>Responsobilities:</b>
-                    <ul class="class="description"">
+                    <ul class="description">
                         <li>Writing code :)</li>
                         <li>Creation of the frontent architecture of the project (multi-lang, multi-brands, micro-frontend)</li>
                         <li>Hire and orginize front-end team</li>
