--- a/index.html
+++ b/index.html
@@ -272,6 +272,9 @@
                 <p class="description">
                     <b>Outsource company</b>. <br>
                     <b>Stack:</b> <span class="description-stack">Vue.js, JavaScript, HTML, CSS/SCSS , jQuery, Photoshop, Pixel Perfect, SFTP/GitLab</span>
+                    <br><br>
+                    <b>Description:</b>
+                    <span class="description-stack">Built a lot of promo sites and landing pages for huge brands like Pepsi, Lays, Raiffeisen bank</span>
                 </p>
             </div>
             <span class="position-time-absolute">1 year 2 months</span>
@@ -289,6 +292,9 @@
                 <p class="description">
                     <b>WEB Studio company</b>. <br>
                     <b>Stack:</b> <span class="description-stack">HTML, CSS/SCSS, JavaScript, jQuery, CMS WordPress / OpenCart, Photoshop, FTP/Bitbucket</span>
+                    <br><br>
+                    <b>Description:</b>
+                    <span class="description-stack">Built e-commerce and landing page sites for local business in Ukraine.</span>
                 </p>
                 <span class="position-time-absolute">10 months</span>
             </div>
