--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <div class="info">
                     <h4>
                         <span class="left">Age:</span>
-                        <span>28</span>
+                        <span>30</span>
                     </h4>
                     <h4>
                         <span class="left">English:</span>
-                        <span>Intermediate</span>
+                        <span>Conversational level</span>
                     </h4>
                     <h4>
                         <span class="left">Location:</span>
@@ -70,14 +70,14 @@
 <!--                    <a href="skype:waleeex">waleeex</a>-->
 <!--                </div>-->
 <!--            </div>-->
-            <div class="row">
+     <!--   <div class="row">
                 <div class="left">
                     <i class="mdi mdi-linkedin"></i>
                 </div>
                 <div class="right">
                     <a href="https://www.linkedin.com/in/valikgren/" target="_blank">linkedin.com/in/valikgren</a>
                 </div>
-            </div>
+            </div>  -->
         </div>
     </div>
     <div id="about-me" class="about-me">
@@ -100,7 +100,7 @@
     </div>
 
     <div id="experience" class="experience">
-        <h2>Experience <span class="grey"> (6+ years)</span></h2>
+        <h2>Experience <span class="grey"> (8+ years)</span></h2>
         <div class="row">
             <div class="left xovi">
                 <img src="img/logo-xovi.png" alt="">
@@ -129,7 +129,7 @@
                     </ul>
                 </p>
             </div>
-            <span class="position-time-absolute">2 years 10 months</span>
+            <span class="position-time-absolute">4 years</span>
         </div>
         <div class="row">
             <div class="left selfllery">
@@ -322,12 +322,12 @@
             <div class="col">
                 <h3>Hard skills:</h3>
                 <ul>
-                    <li>JavaScript (ES6) & TypeScript</li>
-                    <li>Vue.js, Vuex</li>
-                    <li>Vuetify, vue-material</li>
-                    <li>Vue ssr on Node.js, Nuxt.js</li>
-                    <li>Vue CLI, create-react-app</li>
-                    <li>React.js, Redux</li>
+                    <li>JavaScript & TypeScript</li>
+                    <li>Vue 2/Vue 3, Vuex/Pinia</li>
+                    <li>Vuetify, Quasar, vue-material</li>
+                    <li>Nuxt.js</li>
+                    <li>Vite, Vue CLI, create-react-app</li>
+                    <li>React, Redux</li>
                     <li>HTML5, CSS3 (SCSS)</li>
                     <li>Responsive, Flexible, PixelPerfect, Mobile First / Desktop First, <br> sizes on 'em' with resize
                         or on 'px' with media queries
@@ -336,7 +336,7 @@
                     <li>JQuery</li>
                     <li>Unit tests (Jest) & TDD</li>
                     <li>Webpack, Gulp</li>
-                    <li>Git (github, gitlab, bitbucket)</li>
+                    <li>Git</li>
                     <li>Figma, Zeplin, Photoshop</li>
                 </ul>
             </div>
@@ -420,9 +420,9 @@
 <!--            <li>-->
 <!--                <a href="http://klima-hitze.com.ua">http://klima-hitze.com.ua</a>-->
 <!--            </li>-->
-            <li>
+<!--        <li>
                 <a href="https://fiskars.org.ua">https://fiskars.org.ua</a>
-            </li>
+            </li> -->
             <li>
                 <a href="https://www.youtube.com/watch?v=MFANJBJim24">https://www.youtube.com/watch?v=MFANJBJim24</a>
             </li>
