--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <div id="about-me" class="about-me">
         <p class="about-me_text">
-            <p class="about-me_text-inner">I am an experienced <strong>Front-End</strong> Developer with more than <strong>8 years</strong> of commercial experience and <nobr><strong>Master of Computer Science</strong></nobr> degree.</p>
+            <p class="about-me_text-inner">I am an experienced <strong>Front-End</strong> Developer with more than <strong>9 years</strong> of commercial experience and <nobr><strong>Master of Computer Science</strong></nobr> degree.</p>
         </p>
         <p class="about-me_text">
             <!-- <p class="about-me_text-inner">During my career I have worked with dozens of different projects with different team structures and have experience both as the only front-end developer in a team and also in a team with other front-end developers.</p> -->
@@ -100,7 +100,7 @@
     </div>
 
     <div id="experience" class="experience">
-        <h2>Experience <span class="grey"> (8+ years)</span></h2>
+        <h2>Experience <span class="grey"> (9+ years)</span></h2>
         <div class="row">
             <div class="left xovi">
                 <img src="img/logo-xovi.png" alt="">
@@ -323,19 +323,17 @@
                 <h3>Hard skills:</h3>
                 <ul>
                     <li>JavaScript & TypeScript</li>
-                    <li>Vue 2/Vue 3, Vuex/Pinia</li>
+                    <li>Vue 2 (5 years) and Vue 3 (2 years)</li>
+                    <li>Store Vuex and Pinia</li>
                     <li>Vuetify, Quasar, vue-material</li>
-                    <li>Nuxt.js</li>
-                    <li>Vite, Vue CLI, create-react-app</li>
+                    <li>Nuxt, SSR</li>
                     <li>React, Redux</li>
                     <li>HTML5, CSS3 (SCSS)</li>
-                    <li>Responsive, Flexible, PixelPerfect, Mobile First / Desktop First, <br> sizes on 'em' with resize
-                        or on 'px' with media queries
-                    </li>
+                    <li>Responsive, Flexible, PixelPerfect, Mobile First / Desktop First</li>
                     <li>Node.js, npm</li>
                     <li>JQuery</li>
                     <li>Unit tests (Jest) & TDD</li>
-                    <li>Webpack, Gulp</li>
+                    <li>Vite, Vue CLI, Webpack, Gulp, create-react-app</li>
                     <li>Git</li>
                     <li>Figma, Zeplin, Photoshop</li>
                 </ul>
@@ -343,9 +341,10 @@
             <div class="col soft-skills">
                 <h3>Soft skills:</h3>
                 <ul>
-                    <li>Responsible for their work</li>
-                    <li>Intermediate English</li>
-                    <li>Planing, Time tracking, Steering skills</li>
+                    <li>Communication with stakeholders</li>
+                    <li>Responsible</li>
+                    <li>Intermediate English (spoken and writen skills)</li>
+                    <li>Planing, Grooming, Steerings skills</li>
                     <li>Team player</li>
                     <li>Scrum, Kanban</li>
                     <li>Jira, Assana, Slack</li>
